# TurboQuant-Tenstorrent

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md  codebook_gen.py  dequant_attn_kernel.cpp  polarquant_kernel.cpp  qjl_kernel.cpp  reader_kernel.cpp  rotation_kernel.cpp  stage_dump_writer.cpp  test_polarquant.py  test_qjl.py  test_rotation.py  test_roundtrip.py  turboquant_host.cpp  turboquant_launcher.cpp  turboquant_program.cpp  writer_kernel.cpp
host/: turboquant_host.cpp  turboquant_launcher.cpp
kernels/: codebooks.h  dequant_attn_kernel.cpp  polarquant_kernel.cpp  qjl_kernel.cpp  rotation_kernel.cpp  turboquant_layout.h
kernels/dataflow/: reader_kernel.cpp  stage_dump_writer.cpp  writer_kernel.cpp
multi_tile/: README.md  run_pipeline.sh
multi_tile/host/: turboquant_multi_tile.cpp  turboquant_multi_tile_ir.cpp  turboquant_multi_tile_pq.cpp  turboquant_multi_tile_proj.cpp  turboquant_multi_tile_resid.cpp  turboquant_multi_tile_rnorm.cpp
multi_tile/include/: tile_layout.h
multi_tile/kernels/: inverse_rotation_compute.cpp  inverse_rotation_reader.cpp  inverse_rotation_writer.cpp  polarquant_compute.cpp  polarquant_reader.cpp  polarquant_writer.cpp  qjl_project_compute.cpp  qjl_project_reader.cpp  qjl_project_writer.cpp  residual_compute.cpp  residual_reader.cpp  residual_writer.cpp  rnorm_matmul_compute.cpp  rnorm_matmul_reader.cpp  rnorm_matmul_writer.cpp  rotation_compute.cpp  rotation_reader.cpp  rotation_writer.cpp  rsquare_compute.cpp  rsquare_reader.cpp  rsquare_writer.cpp
multi_tile/tests/: test_inverse_rotation_tile.py  test_polarquant_tile.py  test_qjl_end_to_end.py  test_qjl_project_tile.py  test_residual_tile.py  test_rnorm_tile.py  test_rotation_tile.py
multi_wormhole/: README.md
reference/: turboquant.py
tests/: test_polarquant.py  test_qjl.py  test_rotation.py  test_roundtrip.py
